--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "fake-artist": {
+    "avalon-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,13 +17,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/fake-artist",
+            "outputPath": "dist/avalon-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets",
               "src/manifest.json"
             ],
@@ -35,12 +34,10 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -50,13 +47,11 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ],
+              "budgets": [{
+                "type": "initial",
+                "maximumWarning": "2mb",
+                "maximumError": "5mb"
+              }],
               "serviceWorker": true,
               "ngswConfigPath": "src/ngsw-config.json"
             }
@@ -65,18 +60,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fake-artist:build"
+            "browserTarget": "avalon-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fake-artist:build:production"
+              "browserTarget": "avalon-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fake-artist:build"
+            "browserTarget": "avalon-app:build"
           }
         },
         "test": {
@@ -91,7 +86,6 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
               "src/assets",
               "src/manifest.json"
             ]
@@ -111,7 +105,7 @@
         }
       }
     },
-    "fake-artist-e2e": {
+    "avalon-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -120,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fake-artist:serve"
+            "devServerTarget": "avalon-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fake-artist:serve:production"
+              "devServerTarget": "avalon-app:serve:production"
             }
           }
         },
@@ -140,5 +134,5 @@
       }
     }
   },
-  "defaultProject": "fake-artist"
+  "defaultProject": "avalon-app"
 }
