--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,12 @@
 {
-  "name": "Fake Artist Companion",
-  "short_name": "Fake Artist",
-  "theme_color": "#ab47bc",
-  "background_color": "#fafafa",
+  "name": "Avalon Announcer",
+  "short_name": "Avalon",
+  "theme_color": "#6495ED",
+  "background_color": "#E6E6FA",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "icons": [
-    {
+  "icons": [{
       "src": "assets/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
