--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "~7.2.0",
     "braces": "^2.3.2",
     "core-js": "^2.6.5",
+    "dexie": "^2.0.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "webpack": "^4.29.5",
