--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -24,6 +23,7 @@
     "braces": "^2.3.2",
     "core-js": "^2.6.5",
     "dexie": "^2.0.4",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "webpack": "^4.29.5",
