--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/pwa": "^0.12.4",
@@ -23,6 +26,7 @@
     "braces": "^2.3.2",
     "core-js": "^2.6.5",
     "dexie": "^2.0.4",
+    "hammerjs": "^2.0.8",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
