--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.6.5",
     "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
+    "howler": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
