--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
     "howler": "^2.1.1",
+    "idb": "^3.0.2",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
