--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -3,13 +3,12 @@
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
-    "updateMode": "prefetch",
     "resources": {
       "files": [
-        "assets/icons/icon-72x72.png",
-        "index.html",
-        "*.css",
-        "*.js"
+        "/assets/icons/icon-72x72.png",
+        "/index.html",
+        "/*.css",
+        "/*.js"
       ]
     }
   }, {
@@ -18,8 +17,8 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "assets/**",
-        "*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+        "/assets/**",
+        "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
       ],
       "urls": [
         "https://fonts.gstatic.com/s/pacifico/v13/FwZY7-Qmy14u9lezJ-6D6MmTpA.woff2",
