--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,12 @@ description: A web app that uses AngularDart Components
 # author: Zoey Child <imperialoctopus@gmail.com>
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+  sdk: ">=2.4.0 <3.0.0"
 
 dependencies:
   angular: ^5.3.0
   angular_components: ^0.13.0
+  pwa: ^0.2.0
 
 dev_dependencies:
   angular_test: ^2.3.0
