--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   angular: ^5.3.0
   angular_components: ^0.13.0
+  angular_router: ^2.0.0-alpha
   pwa: ^0.2.0
 
 dev_dependencies:
