--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: avalon_app
-description: A web app that uses AngularDart Components
-# version: 1.0.0
-# homepage: https://www.example.com
-# author: Zoey Child <imperialoctopus@gmail.com>
+description: "A web app to replace the announcer when playing The Resistance: Avalon."
+version: 1.0.0
+homepage: https://avalon.imperialoctopus.com/
+author: Zoey Child <imperialoctopus@gmail.com>
 
 environment:
   sdk: ">=2.4.0 <3.0.0"
@@ -11,6 +11,7 @@ dependencies:
   angular: ^5.3.0
   angular_components: ^0.13.0
   angular_router: ^2.0.0-alpha
+  hive: ^1.1.1
   pwa: ^0.2.0
 
 dev_dependencies:
