--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,28 +1,52 @@
 {
-  "name": "avalon_app",
-  "short_name": "avalon_app",
-  "description": "A web app that uses AngularDart Components",
+  "name": "Avalon Announcer",
+  "short_name": "Avalon",
+  "description": "A web app to replace the announcer when playing The Resistance: Avalon.",
   "lang": "en-US",
-  "start_url": "/",
-  "scope": "/",
+  "theme_color": "#6495ED",
+  "background_color": "#9ac5ff",
   "display": "standalone",
-  "orientation": "any",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "__mock_values__icons": [
+  "scope": "/",
+  "start_url": "/",
+  "icons": [
     {
-      "src": "launcher-icon-1x.png",
-      "sizes": "48x48",
+      "src": "assets/icons/icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "launcher-icon-2x.png",
+      "src": "assets/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "launcher-icon-4x.png",
+      "src": "assets/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
